[tool.poetry]
name = "clustering"
version = "1.0.0"
description = ""
authors = ["Masum Billal <proafxin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"


[tool.poetry.group.formatting.dependencies]
ruff = "^0.0.282"
mypy = "^1.4.1"

[tool.ruff]

# src = ['clustering']

line-length = 120

select = [
  "E",
  "F",
  "B",
  "W",
  "Q",
  "UP",
  "I",
  "N",
  "I001",
]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.isort]
# combine-as-imports = true
force-sort-within-sections = true
# lines-between-types = 2
lines-after-imports = 2
relative-imports-order = "closest-to-furthest"
order-by-type = true
# section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]


[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.pylint]
max-args = 10


[tool.mypy]
# files = ["bundled/tool", "tests"]
no_implicit_optional = true
check_untyped_defs = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
